# swagger.json
@@ -1,5 +1,5 @@
 {
-    "swagger": "2.0",
+    "openapi": "3.0.0",
     "info": {
         "description": "This is the docs of [orvide.com](http://orvide.com)",
         "version": "1.0.0",
@@ -19,10 +19,13 @@
         {
             "name": "auth",
             "description": "Authentication Route"
+        },
+        {
+            "name": "meta",
+            "description": "Fetch meta details"
         }
     ],
     "schemes": [
-        "https",
         "http"
     ],
     "paths": {
@@ -34,10 +37,12 @@
                 "summary": "Verify the Email",
                 "description": "Send a verification link to the provided email!",
                 "consumes": [
-                    "multipart/form-data"
+                    "application/json",
+                    "application/xml"
                 ],
                 "produces": [
-                    "application/json"
+                    "application/json",
+                    "application/xml"
                 ],
                 "parameters": [
                     {
@@ -46,21 +51,125 @@
                         "description": "Enter a valid email address",
                         "required": true,
                         "type": "string"
+                    },
+                    {
+                        "name": "password",
+                        "in": "path",
+                        "description": "Enter a password",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "confirm password",
+                        "in": "path",
+                        "description": "Confirm your password",
+                        "required": false,
+                        "type": "string"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "successful operation"
+                        "description": "Verification Mail sent at {$email}"
                     },
                     "400": {
-                        "description": "failed"
+                        "description": "Error: Bad Request"
                     }
-                },
-                "security": [
+                }
+            }
+        },
+        "/auth/register": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Register the complete user",
+                "description": "Register the firstName, lastName, username, and email address along with the verification OTP",
+                "consumes": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "produces": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "parameters": [
                     {
-                        "api_key": []
+                        "name": "email",
+                        "in": "path",
+                        "description": "Enter a valid email address",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "username",
+                        "in": "path",
+                        "description": "Enter the chosen username",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "otp",
+                        "in": "path",
+                        "description": "The verification OTP",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "First Name",
+                        "in": "path",
+                        "description": "The first Name",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "Last Name",
+                        "in": "path",
+                        "description": "The Last Name",
+                        "required": true,
+                        "type": "string"
                     }
-                ]
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User Registered Successfully"
+                    },
+                    "400": {
+                        "description": "Error: Bad Request"
+                    }
+                }
+            }
+        },
+        "/meta/uname_unique": {
+            "post": {
+                "tags": [
+                    "meta"
+                ],
+                "summary": "fetch to find if it is unique username",
+                "description": "Check if the supplied username is unique or not",
+                "consumes": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "produces": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "parameters": [
+                    {
+                        "name": "uname",
+                        "in": "path",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Verification Mail sent at {$email}"
+                    },
+                    "400": {
+                        "description": "Error: Bad Request"
+                    }
+                }
             }
         }
     },
